blog redesign complete. portoflio content stuffed. portfolio complete.

--- a/views/about.haml
+++ b/views/about.haml
@@ -46,21 +46,19 @@
       .category-container
         %table{:cellspacing => "0", :cellpadding => "0"}
           %tr
-            %th 
-              University of Waterloo
-              .date May 2011
-            %th 
-              University of Waterloo
-              .date March 2011
-            %th 
-              Parsons School of Design
-              .date 2007 – 2008
-            %th 
-              Carnegie Mellon University
-              .date 2001 – 2005
-            %th 
-              Centre International D’Etudes Français
-              .date Summer 2004
+            %th University of Waterloo
+            %th University of Waterloo
+            %th Parsons School of Design
+            %th Carnegie Mellon University
+            %th Centre International D’Etudes Français
+          
+          %tr
+            %td.date May 2011
+            %td.date March 2011
+            %td.date 2007 – 2008
+            %td.date 2001 – 2005
+            %td.date Summer 2004
+          
           %tr
             %td Certificate of Completion for Intermediate Java Programming 
             %td Certificate of Completion for Introduction to Java Programming
@@ -144,19 +142,42 @@
           %tr
             %th 
               Freelance Web Designer and Developer
-              .date May 2011
             %th 
               Frontend Engineer
-              .date March 2011
             %th 
               Intern Designer
-              .date 2007 – 2008
             %th 
               Freelance Web Designer and Developer
-              .date 2001 – 2005
             %th 
               Junior Woodworker
-              .date Summer 2004
+      
+          %tr
+            %td.date 
+              San Francisco, CA
+              .job
+                %a(href="/")
+                  Self Employed
+            %td.date 
+              New York
+              .job
+                %a(href="http://intersectnyc.com" target="_blank")
+                  Intersect NYC
+            %td.date 
+              Brooklyn, NY
+              .job
+                %a(href="http://creativelabny.com/" target="_blank")
+                  Creative Lab
+            %td.date 
+              New York, NY
+              .job
+                %a(href="/")
+                  Self Employed
+            %td.date 
+              Brooklyn, NY
+              .job
+                %a(href="http://cityjoinery.com/" target="_blank")
+                  City Joinery
+          
           %tr
             %td 
               September 2011 – Present 
