--- a/views/index.haml
+++ b/views/index.haml
@@ -121,6 +121,10 @@
     .small-thumb#kimara_opener
       %a(href="#")
         %img(src="/images/portfolio/web/kimara.png" alt="kimara")/
+        
+    .small-thumb#cinemax_opener
+      %a(href="#")
+        %img(src="/images/portfolio/web/cinemax.png" alt="cinemax")/
   
   .print
     .print-logo
@@ -143,6 +147,16 @@
     
     .small-thumb#color_collage1_opener
       %img(src="/images/portfolio/print/color3.jpg" alt="color")/
+    
+    .short-row.abstract
+      .small-thumb#abstract_opener
+        %a(href="#")
+          %img(src="/images/portfolio/print/abstract.png" alt="abstract")/
+
+    .short-row.signage
+      .small-thumb#signage_opener
+        %a(href="#")
+          %img(src="/images/portfolio/print/signage.png" alt="signage")/
     
   .woodwork
     .woodwork-logo
@@ -189,7 +203,6 @@
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC 
           to develop the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views. 
-          %br/
           URL:
           %a(href="http://www.scullyandscully.com" target="_blank")
             http://www.scullyandscully.com
@@ -206,7 +219,6 @@
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC 
           to develop the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views.
-          %br/
           URL: 
           %a(href="http://www.mallybeauty.com" target="_blank")
             http://www.mallybeauty.com
@@ -233,7 +245,6 @@
             %a(href="http://intersectnyc.com" target="_blank")
               Intersect NYC 
             to develop the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views for this kid's clothing e-commerce site. 
-            %br/
             URL:
             %a(href="http://www.kicokids.com" target="_blank")
               http://www.kicokids.com 
@@ -260,7 +271,6 @@
         %span Satellite Records
         %p 
           Satellite Records is a major player in the industry of digital download music with DJ's all around the world as its target audience. I contributed to the the frontend by writing HTML, CSS, to produce web compliant Rails views. 
-          %br/
           URL:
           %a(href="http://www.satelliterecords.com" target="_blank")
             http://www.satelliterecords.com
@@ -288,7 +298,6 @@
           As a temporary administrator for Bobbi Brown's facebook page, I created a custom tab called Beauty Rules and reconfigured third party HTML to work within the Facebook framework. Partnered with 
           %a(href="http://www.intersectnyc.com" target="_blank")
             Intersect NYC.
-          %br/
           URL:
           %a(href="http://www.facebook.com/BobbiBrown?v=app_6009294086&ref=ts" target="_blank")
             http://www.facebook.com/BobbiBrown?v=app_6009294086&ref=ts
@@ -304,8 +313,7 @@
           Partnered with 
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC 
-          to develop the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views for this high-end fashion design site.
-          %br/
+          to develop the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views for this high-end fashion design site
           URL:
           %a(href="http://www.yigal-azrouel.com/" target="_blank")
             http://www.yigal-azrouel.com
@@ -321,7 +329,6 @@
           Took an existing Rails e-commerce framework and re-skinned it to make this site. Other than the designers involved in the making of Boast, little backend support was required, which made the development phase for the most part a rare solo project. Developed the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views in partnership with
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC.
-          %br/
           URL:
           %a(href="http://www.boastusa.com/" target="_blank")
             http://www.boastusa.com
@@ -367,7 +374,6 @@
           Fot Grand SF I wrote the HTML5 video player and encoded other formats of videos, such as mp4 and ogg type, to supplement flash video for browsers that are HTML5 compatible. Developed in partnership with
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC.
-          %br/
           URL:
           %a(href="http://www.agrandsite.com/" target="_blank")
             http://www.agrandsite.com
@@ -383,7 +389,6 @@
           "NewlyWish is a wedding gift registry service designed to provide to-be-weds, their friends and family, with the choice, convenience, and personalization they desire." This project involved many developers. My role included writing some of the frontend using HTML, CSS, and some very basic Ruby and JavaScript(JQuery). Developed in partnership with
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC.
-          %br/
           URL:
           %a(href="http://www.newlywish.com/" target="_blank")
             http://www.newlywish.com
@@ -403,7 +408,6 @@
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC
           to implement the re-skinning of the user interface by writing HTML, CSS and basic Ruby for the frontend. 
-          %br/
           URL:
           %a(href="http://zync.luckylookout.com/" target="_blank")
             http://zync.luckylookout.com
@@ -419,7 +423,6 @@
           For this site I wrote XML builder files and integrated much of the flash into our rails framework. To a lesser extent I partially wired up the content management system in the back-end. All HTML and CSS and most Javascript was written by me. Collaborated with
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC.
-          %br/
           URL:
           %a(href="http://www.carlosfalchi.com/" target="_blank")
             http://www.carlosfalchi.com 
@@ -448,7 +451,6 @@
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC 
           in developing the front end of this detox juice-centric e-commerce site. My role included writing the HTML, CSS, basic Ruby and some Javascript for the user interface. 
-          %br/
           URL:
           %a(href="http://www.coolercleanse.com/" target="_blank")
             http://www.coolercleanse.com
@@ -467,8 +469,7 @@
           This is a sub site for 
           %a(href="http://www.chilewich.com" target="_blank")
             www.chilewich.com
-          , targeted at wholesale partners. My development work included writing HTML, CSS, basic Ruby and some Javascript for the user interface. 
-          %br/
+          targeted at wholesale partners. My development work included writing HTML, CSS, basic Ruby and some Javascript for the user interface. 
           URL:
           %a(href="http://www.chilewich.com/wholesale/" target="_blank")
             http://www.chilewich.com/wholesale
@@ -485,7 +486,6 @@
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC 
           in fully re-skinning the front end of this fashion setting user base driven site by writing HTML, CSS, basic Ruby and some Javascript for the user interface. 
-          %br/
           URL:
           %a(href="http://stylespotter.luckymag.com/" target="_blank")
             http://stylespotter.luckymag.com
@@ -515,7 +515,6 @@
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC 
           to re-skin this vast site written almost entirely in PHP. I wrote new HTML, re-formatted existing HTML with CSS, wrote basic PHP, and Javascript for the entire user interface. 
-          %br/
           URL:
           %a(href="http://www.bondandbowery.com/" target="_blank")
             http://www.bondandbowery.com
@@ -532,7 +531,6 @@
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC 
           to develop this striking and elegant e-commerce site, which emphasizes craftsmanship and well made designs with a focus on materials and textiles. I provided HTML, CSS, basic Ruby and some Javascript for the front end. 
-          %br/
           URL:
           %a(href="http://www.chilewich.com/" target="_blank")
             http://www.chilewich.com
@@ -549,7 +547,6 @@
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC 
           to develop the user interface for this site, which features a search engine for navigating through this structural engineering firm's portfolio. I provided HTML, CSS, basic Ruby and some Javascript for the front end.
-          %br/
           URL:
           %a(href="http://www.thorntontomasetti.com/" target="_blank")
             http://www.thorntontomasetti.com
@@ -565,7 +562,7 @@
           Collaborated with 
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC 
-          to develop the user interface to achieve the company's new vision and relaunching of the Liz brand. I provided HTML, CSS, basic Ruby and some Javascript for the front end.
+          to develop the user interface to achieve the company's new vision and relaunching of the Liz brand. I provided HTML, CSS, and basic Ruby for the front end.
 
 #citibabes    
   .detail-container
@@ -578,8 +575,7 @@
           This vibrant site is a one stop shop for city parents on the go. Partnered with
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC 
-          to develop the user interface by providing HTML, CSS, basic Ruby and some Javascript for the front end.
-          %br/
+          to develop the user interface by providing HTML, CSS, basic Ruby and some Javascript(JQuery) for the front end.
           URL:
           %a(href="http://www.citibabes.com/" target="_blank")
             http://www.citibabes.com
@@ -595,7 +591,7 @@
           This site focuses on it's community and sells an extensive line of beauty products. Partnered with
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC 
-          to develop the user interface by providing HTML, CSS, basic Ruby and some Javascript for the front end.
+          to develop the user interface by providing HTML, CSS, and basic Ruby for the front end.
           
 #kates    
   .detail-container
@@ -608,8 +604,7 @@
           Partnered with 
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC 
-          to develop the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views. 
-          %br/
+          to develop the frontend by writing HTML, CSS, and some very basic Ruby to produce web compliant Rails views. 
           URL:
           %a(href="http://www.katespaperie.com/" target="_blank")
             http://www.katespaperie.com
@@ -618,7 +613,7 @@
   .detail-container
     .inner-container   
       %a.close#js-close-modal(href="#")
-      %img(src="/images/portfolio/web/kimara.jpg" alt="Kimara")/
+      %img(src="/images/portfolio/web/cinemax.jpg" alt="Cinemax")/
       .project-description
         %span Kimara Ahnert
         %p 
@@ -626,10 +621,25 @@
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC 
           to develop the frontend by writing HTML, CSS, and some very basic Ruby to produce web compliant Rails views for this high end beauty product e-commerce site. 
-          %br/
           URL:
-          %a(href="http://www.kimara.com/" target="_blank")
-            http://www.kimara.com
+          %a(href="http://getmax.com/" target="_blank")
+            http://getmax.com
+            
+#cinemax    
+  .detail-container
+    .inner-container   
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/cinemax.jpg" alt="Cinemax")/
+      .project-description
+        %span Cinemax
+        %p 
+          Collaborated with 
+          %a(href="http://creativelabny.com/" target="_blank")
+            CreativeLab 
+          in re-skinning this site using xml, flash, and html. 
+          URL:
+          %a(href="http://getmax.com/" target="_blank")
+            http://getmax.com
 
 #bwcollage1     
   .detail-container
@@ -638,7 +648,7 @@
       %img(src="/images/portfolio/print/bwcollage1.jpg" alt="bwcollage")/
       .project-description
         %span Composing with random objects, part 1.1
-        %p In a graduate school course called "Design Process; Visual Communication", we were given an assignment with the following parameters. We were to create three different compositions in black and white with objects randomly picked out from a bag. We were allowed to use a Xerox machine to create copies and we were allowed to alternate the size of these objects. Each object was allowed to appear several times in the same composition. I picked a screw, an apple and a crayon tip. This is the first of three from the black and white series.   
+        %p In a graduate school course called "Design Process; Visual Communication", we were given an assignment with the following parameters. We were to create three different compositions in black and white with objects randomly picked out from a bag. We were allowed to use a Xerox machine to create copies and we were allowed to alter the size of these objects. Each object was allowed to appear several times in the same composition. I picked a screw, an apple and a crayon tip. This is the first of three from the black and white series.   
   
 #bwcollage2    
   .detail-container
@@ -647,7 +657,7 @@
       %img(src="/images/portfolio/print/bwcollage3.jpg" alt="bwcollage")/
       .project-description
         %span Composing with random objects, part 1.2
-        %p This is the secod of three from the black and white series. This particular collage was received well and had the most positive critique, with the placing of the incredibly abstract crayon tip in the upper left side. It is also my personal favorite from the series.  
+        %p This is the secod of three from the black and white series. This particular collage was received well and had the most positive critique, particularly due to the placing of the abstract crayon tip in the upper left. It is also my personal favorite from the series.  
   
         
 #bwcollage3     
@@ -685,6 +695,24 @@
       .project-description
         %span Composing with random objects, part 2.2
         %p Above is part two of the color collage series.
+        
+#abstract     
+  .detail-container
+    .inner-container    
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/print/abstract.jpg" alt="abstract")/
+      .project-description
+        %span Composing with type
+        %p These abstract compositions use three different font types at 48pt. They are composed using parts of several letters, punctuations and/or numbers.
+        
+#signage     
+  .detail-container
+    .inner-container    
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/print/signage.jpg" alt="signage")/
+      .project-description
+        %span Typographic portrait of a NYC neighborhood (East Village)
+        %p In this graduate school assignment I was asked to explore a neighborhood of my choice and collect pictures of old and new signage, postings of all kinds, graffiti, way finding systems, etc., that define the neighborhood. From these images, I created a book that visually explores the East Village and its specific flavor. These are the final photographs that were included in my typographic neighborhood book.
         
 #sycamore  
   .detail-container
